--- a/src/Page/MakersEditor/ProjectList/index.scss
+++ b/src/Page/MakersEditor/ProjectList/index.scss
@@ -1,14 +1,21 @@
 .makersEditor-ProjectList {
   display: flex;
+  position: relative;
   flex-direction: column;
   height: 100%;
+  overflow-y: auto;
 
   .makersEditor-ProjectList-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 40px;
+    min-height: 40px;
     padding: 16px;
+
+    > img {
+      cursor: pointer;
+    }
 
     .makersEditor-ProjectList-header__title {
       font-size: 24px;
@@ -17,6 +24,77 @@
   }
 
   .makersEditor-ProjectList-body {
-    padding: 8px;
+    // padding: 8px;
+
+    .makersEditor-ProjectList-body-list {
+      padding: 8px;
+
+      .makersEditor-ProjectList-body-list__course {
+        padding: 8px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 150%;
+        cursor: pointer;
+
+        &.selected {
+          background-color: #f2f4f7;
+          border-radius: 4px;
+        }
+
+        .makersEditor-ProjectList-body-list__title {
+          position: relative;
+          > img {
+            position: absolute;
+            right: 0;
+          }
+        }
+      }
+
+      .makersEditor-ProjectList-body-list__lecture {
+        padding: 8px 16px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 150%;
+        color: #344054;
+        cursor: pointer;
+      }
+    }
   }
+
+  .makersEditor-ProjectList-dictionary {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .makersEditor-ProjectList-dictionary-wrapper {
+      display: flex;
+      position: absolute;
+      align-items: center;
+      justify-content: space-between;
+      padding: 12px 16px;
+      bottom: 32px;
+      width: 75%;
+      border-radius: 8px;
+      border: 1px solid #e4e7ec;
+      background: #fff;
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 24px;
+
+      .makersEditor-ProjectList-dictionary-wrapper__title {
+        margin: 0;
+        line-height: 1;
+      }
+    }
+  }
+}
+
+.makersEditor-ProjectList::-webkit-scrollbar {
+  display: none;
+  width: 5px;
+}
+
+.makersEditor-ProjectList::-webkit-scrollbar-thumb {
+  height: 30%;
+  border-radius: 10px;
+  background: #b6b9bd9c;
 }
