--- a/src/Page/MakersEditor/index.scss
+++ b/src/Page/MakersEditor/index.scss
@@ -1,12 +1,12 @@
 .makersEditor {
   position: relative;
   display: flex;
-  width: 100vw;
+  width: calc(100vw - 15px);
   height: 100vh;
   background-color: #f9fafb;
 
   section:nth-of-type(1) {
-    min-width: 270px;
+    min-width: 300px;
     background-color: #f9fafb;
     border-right: 1px solid #e4e7ec;
   }
