--- a/src/Page/MakersEditor/Editor/index.scss
+++ b/src/Page/MakersEditor/Editor/index.scss
@@ -19,7 +19,8 @@
   }
 
   .makersEditor-Editor-body {
-    padding: 32px;
+    position: relative;
+    padding: 32px 64px;
     padding-bottom: 0;
     flex: 1;
   }
@@ -48,5 +49,12 @@
         pointer-events: none;
       }
     }
+  }
+
+  .makersEditor-Editor-popup {
+    position: absolute;
+    z-index: 10;
+    bottom: 85px;
+    right: 0;
   }
 }
