--- a/src/Page/MakersEditor/Editor/Field/index.scss
+++ b/src/Page/MakersEditor/Editor/Field/index.scss
@@ -10,6 +10,22 @@
     max-width: 800px;
     width: 100%;
     > input {
+      box-sizing: border-box;
+      width: 100%;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid var(--Gray-200, #e4e7ec);
+      font-family: Pretendard;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+    }
+  }
+
+  .makersEditor-Editor-body-fields__section-body__select {
+    max-width: 800px;
+    width: 100%;
+    > select {
       width: 100%;
       padding: 12px;
       border-radius: 8px;
@@ -25,6 +41,7 @@
     max-width: 800px;
     width: 100%;
     > textarea {
+      box-sizing: border-box;
       width: 100%;
       height: 150px;
       padding: 12px;
@@ -44,7 +61,7 @@
 
     img {
       margin-right: 10px;
-      width: 100px;
+      width: 150px;
     }
 
     button {
