--- a/src/Page/MakersEditor/ProjectList/index.scss
+++ b/src/Page/MakersEditor/ProjectList/index.scss
@@ -67,12 +67,14 @@
     justify-content: center;
     .makersEditor-ProjectList-dictionary-wrapper {
       display: flex;
-      position: absolute;
+      position: fixed;
+      left: 20px;
+      z-index: 1000;
+      width: 230px;
       align-items: center;
       justify-content: space-between;
       padding: 12px 16px;
       bottom: 32px;
-      width: 75%;
       border-radius: 8px;
       border: 1px solid #e4e7ec;
       background: #fff;
