--- a/src/Page/MakersEditor/Editor/Field/index.scss
+++ b/src/Page/MakersEditor/Editor/Field/index.scss
@@ -19,6 +19,11 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 24px;
+
+      &:disabled {
+        color: #98a2b3;
+        background-color: #f2f4f7;
+      }
     }
   }
 
