--- a/src/Page/MakersEditor/ProjectList/index.scss
+++ b/src/Page/MakersEditor/ProjectList/index.scss
@@ -81,6 +81,7 @@
       font-size: 16px;
       font-weight: 600;
       line-height: 24px;
+      cursor: pointer;
 
       .makersEditor-ProjectList-dictionary-wrapper__title {
         margin: 0;
