--- a/src/Page/MakersEditor/index.scss
+++ b/src/Page/MakersEditor/index.scss
@@ -1,7 +1,8 @@
 .makersEditor {
   position: relative;
   display: flex;
-  width: calc(100vw - 15px);
+  // width: calc(100vw - 15px);
+  width: 100vw;
   height: 100vh;
   background-color: #f9fafb;
 
